--- a/app/globals.css
+++ b/app/globals.css
@@ -6,8 +6,8 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-ibmPlexSans: var(--font-ibmPlexSans);
+  --font-geistMono: var(--font-geistMono);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -128,10 +128,4 @@
 ::view-transition-new(root) {
   animation: none;
   mix-blend-mode: normal;
-}
-
-/* Dock active state */
-[data-dock-icon]:has(a[aria-current="page"]) {
-  background-color: oklch(var(--accent));
-  color: oklch(var(--accent-foreground));
 }
